threads with enclaves with sockets

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
    "files.associations": {
       "filesystem": "cpp",
-      "string": "cpp"
+      "string": "cpp",
+      "iostream": "cpp"
    }
 }
