messages being ciphered in python and deciphered in the enclave done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
    "files.associations": {
       "filesystem": "cpp",
       "string": "cpp",
-      "iostream": "cpp"
+      "iostream": "cpp",
+      "vector": "cpp",
+      "ostream": "cpp"
    }
 }
