--- a/mix_solution/Makefile
+++ b/mix_solution/Makefile
@@ -74,7 +74,7 @@ else
 	Urts_Library_Name := sgx_urts
 endif
 
-App_Cpp_Files := App/App.cpp App/PeerReceiver.cpp
+App_Cpp_Files := App/App.cpp App/Mix_Worker.cpp
 App_Include_Paths := -IInclude -IApp -I$(SGX_SDK)/include
 
 App_C_Flags := $(SGX_COMMON_CFLAGS) -fPIC -Wno-attributes $(App_Include_Paths)
